security testing correções